--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
   
   <title>Frontend Mentor | Blog preview card</title>
   <link rel="stylesheet" href="style.css">
@@ -26,7 +26,7 @@
 
   These languages are the backbone of every website, defining structure, content, and presentation.
 <div class="image-with-caption">
-  <img src="../images/image-avatar.webp" alt="" height="50" width="50">
+  <img src="image-avatar.webp" alt="" height="50" width="50">
   <p class="caption"> Greg Hooper</p>
 </div>
  
